--- a/index.html
+++ b/index.html
@@ -2,60 +2,52 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Photo.png" />
+    <link rel="icon" type="image/png"
+      href="https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=64&h=64&q=80"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="google-site-verification"
-      content="ZYNfZwMUiNwSMF3EMvY85bid2BVvB12uMMRfUNWw75A"
-    />
-    <meta
-      name="keywords"
-      content="Eki, Eki Zulfar,Eki Zulfar Rachman, siapa Eki, Eki adalah , Siapa Eki Zulfar , ekizr"
-    />
+    <meta name="google-site-verification" content="" />
+    <meta name="keywords"
+      content="Subhrat Agarwal, Full Stack Developer, Portfolio, Projects, Contact" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta
-      name="title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
-    />
+    <meta name="title" content="Subhrat Agarwal - Portfolio" />
     <meta
       name="description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
+      content="Subhrat Agarwal — Full Stack Developer passionate about building scalable, modern web applications and solving real-world problems."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://eki.my.id/" />
-    <meta
-      property="og:title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
-    />
+    <meta property="og:url" content="https://portfolio-n7vl.onrender.com/" />
+    <meta property="og:title" content="Subhrat Agarwal - Portfolio" />
     <meta
       property="og:description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
+      content="Explore projects and works by Subhrat Agarwal, a full stack developer passionate about innovation and user experience."
     />
-    <meta property="og:image" content="https://eki.my.id/Meta.png" />
+    <meta
+      property="og:image"
+      content="https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=1200&h=630&q=80"
+    />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://eki.my.id/" />
-    <meta
-      property="twitter:title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
-    />
+    <meta property="twitter:url" content="https://portfolio-n7vl.onrender.com/" />
+    <meta property="twitter:title" content="Subhrat Agarwal - Portfolio" />
     <meta
       property="twitter:description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
+      content="Explore projects and works by Subhrat Agarwal, a full stack developer passionate about innovation and user experience."
     />
-    <meta property="twitter:image" content="https://eki.my.id/Meta.png" />
+    <meta
+      property="twitter:image"
+      content="https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=1200&h=630&q=80"
+    />
+
     <meta name="theme-color" content="rgb(3,0,20)" />
     <meta name="msapplication-navbutton-color" content="rgb(3,0,20)" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <title>sigma developer</title>
+    <title>Subhrat Agarwal - Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
